Refactor auth middleware, add Jwt validation and refactor pagination middleware;
