# pkg/models/user.go
@@ -2,7 +2,8 @@ package models
 
 type User struct {
 	Shared
-	Name string
-	Age  int
-	CPF  string
+	Name     string
+	Age      int
+	CPF      string
+	Password string
 }
